# website

./: .gitignore  LICENSE  README.md  astro.config.mjs  dune  dune-project  index.html  package-lock.json  package.json  riot_website.opam  tailwind.config.mjs  vite.config.js
.github/workflows/: deploy.yml
docs/: CNAME
src/: dune
src/content/docs/: index.mdx
src/content/docs/getting-started/: index.mdx
src/styles/: custom.css
